Test service increatse functionality
