# pkg/pb/service.pb.validate.go
@@ -100,3 +100,139 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = VersionResponseValidationError{}
+
+// Validate checks the field values on SomeStringResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *SomeStringResponse) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for SomeString
+
+	return nil
+}
+
+// SomeStringResponseValidationError is the validation error returned by
+// SomeStringResponse.Validate if the designated constraints aren't met.
+type SomeStringResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e SomeStringResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e SomeStringResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e SomeStringResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e SomeStringResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e SomeStringResponseValidationError) ErrorName() string {
+	return "SomeStringResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e SomeStringResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sSomeStringResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = SomeStringResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = SomeStringResponseValidationError{}
+
+// Validate checks the field values on TestRequest with the rules defined in
+// the proto definition for this message. If any rules are violated, an error
+// is returned.
+func (m *TestRequest) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for Value
+
+	return nil
+}
+
+// TestRequestValidationError is the validation error returned by
+// TestRequest.Validate if the designated constraints aren't met.
+type TestRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TestRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TestRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TestRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TestRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TestRequestValidationError) ErrorName() string { return "TestRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e TestRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTestRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TestRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TestRequestValidationError{}
